--- a/Task1/sm/sm.cbp
+++ b/Task1/sm/sm.cbp
@@ -31,6 +31,8 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="a_hw_sprintf.asm" />
+		<Unit filename="hw_sprintf.asm" />
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
 		<Extensions>
